@@ -9,13 +9,12 @@ import com.jamit.auth.handler.MemberAuthenticationEntryPoint;
 import com.jamit.auth.handler.MemberAuthenticationFailureHandler;
 import com.jamit.auth.handler.MemberAuthenticationSuccessHandler;
 import com.jamit.auth.jwt.JwtTokenizer;
-import com.jamit.auth.utils.CustomAuthorityUtils;
 import com.jamit.member.repository.MemberRepository;
+import com.jamit.auth.handler.OAuth2MemberSuccessHandler;
 import java.util.Arrays;
+import java.util.List;
 import lombok.RequiredArgsConstructor;
 import org.springframework.context.annotation.Bean;
-import org.springframework.context.annotation.Configuration;
-import org.springframework.http.HttpMethod;
 import org.springframework.security.authentication.AuthenticationManager;
 import org.springframework.security.config.annotation.web.builders.HttpSecurity;
 import org.springframework.security.config.annotation.web.configuration.EnableWebSecurity;
@@ -23,6 +22,7 @@ import org.springframework.security.config.annotation.web.configurers.AbstractHt
 import org.springframework.security.config.http.SessionCreationPolicy;
 import org.springframework.security.crypto.factory.PasswordEncoderFactories;
 import org.springframework.security.crypto.password.PasswordEncoder;
+import org.springframework.security.oauth2.client.web.OAuth2LoginAuthenticationFilter;
 import org.springframework.security.web.SecurityFilterChain;
 import org.springframework.web.cors.CorsConfiguration;
 import org.springframework.web.cors.CorsConfigurationSource;
@@ -33,7 +33,6 @@ import org.springframework.web.cors.UrlBasedCorsConfigurationSource;
 public class SecurityConfiguration {
 
     private final JwtTokenizer jwtTokenizer;
-
     private final MemberRepository memberRepository;
 
     @Bean
@@ -41,25 +40,30 @@ public class SecurityConfiguration {
         http
             .headers().frameOptions().sameOrigin()
             .and()
-            .csrf().disable()
-            .cors(withDefaults())
-            .sessionManagement().sessionCreationPolicy(SessionCreationPolicy.STATELESS) // 세션 무상태
+                .csrf().disable()
+                .cors(withDefaults())
+                .sessionManagement().sessionCreationPolicy(SessionCreationPolicy.STATELESS) // 세션 무상태
             .and()
-            .formLogin().disable()
-            .httpBasic().disable()
-            .exceptionHandling() // 예외 처리 지정
-            .authenticationEntryPoint(new MemberAuthenticationEntryPoint()) // 401 unauthorized error
-            .accessDeniedHandler(new MemberAccessDeniedHandler()) // 403 Forbidden error
+                .formLogin().disable()
+                .httpBasic().disable()
+                .exceptionHandling() // 예외 처리 지정
+                .authenticationEntryPoint(new MemberAuthenticationEntryPoint()) // 401 unauthorized error
+                .accessDeniedHandler(new MemberAccessDeniedHandler()) // 403 Forbidden error
             .and()
-            .apply(new CustomFilterConfigurer()) // Custom Configurer 추가
+                .apply(new CustomFilterConfigurer()) // Custom Configurer 추가
             .and()
-            .authorizeHttpRequests(authorize -> authorize
-                .antMatchers(HttpMethod.POST, "/*/user/signup").permitAll()
-                .antMatchers(HttpMethod.POST, "/*/user/login").permitAll()
-                .antMatchers(HttpMethod.POST, "/*/user/**").hasRole("USER")
-//                .antMatchers("/**").authenticated()
-                .anyRequest().permitAll()
+                .authorizeHttpRequests(authorize -> authorize
+//                    .antMatchers(HttpMethod.POST, "/*/user/signup").permitAll()
+//                    .antMatchers(HttpMethod.POST, "/*/user/login").permitAll()
+//                    .antMatchers("/login/oauth2/code/google").permitAll()
+//                    .antMatchers(HttpMethod.POST, "/*/user/**").hasRole("USER")
+//                    .antMatchers("/**").authenticated()
+                    .anyRequest().permitAll()
+                )
+            .oauth2Login(oauth2 -> oauth2
+                .successHandler(new OAuth2MemberSuccessHandler(jwtTokenizer, memberRepository))
             );
+
         return http.build();
     }
 
@@ -72,7 +76,10 @@ public class SecurityConfiguration {
     CorsConfigurationSource corsConfigurationSource() {
         CorsConfiguration configuration = new CorsConfiguration();
         configuration.setAllowedOrigins(Arrays.asList("*"));
-        configuration.setAllowedMethods(Arrays.asList("GET", "POST", "PATCH", "DELETE"));
+        configuration.setAllowedMethods(Arrays.asList("GET", "POST", "PATCH", "PUT", "DELETE", "HEAD"));
+        configuration.setAllowedHeaders(List.of("*"));
+        configuration.setExposedHeaders(List.of("*"));
+
         UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
         source.registerCorsConfiguration("/**", configuration);
         return source;
@@ -92,7 +99,7 @@ public class SecurityConfiguration {
 
             // JwtAuthenticationFilter 를 생성하며 필요한 AuthenticationManager 와 jwtTokenizer 를 DI
             JwtAuthenticationFilter jwtAuthenticationFilter = new JwtAuthenticationFilter(
-                authenticationManager, jwtTokenizer);
+                authenticationManager, jwtTokenizer, memberRepository);
             jwtAuthenticationFilter.setFilterProcessesUrl("/user/login"); // default URL 지정
             jwtAuthenticationFilter.setAuthenticationSuccessHandler(
                 new MemberAuthenticationSuccessHandler());
@@ -104,7 +111,9 @@ public class SecurityConfiguration {
 
             builder // Security Filter Chain 에 추가
                 .addFilter(jwtAuthenticationFilter) // JWT 인증 필터
-                .addFilterAfter(jwtVerificationFilter, JwtAuthenticationFilter.class); // JWT 검증 필터
+                .addFilterAfter(jwtVerificationFilter, JwtAuthenticationFilter.class) // JWT 검증 필터
+                .addFilterAfter(jwtVerificationFilter, OAuth2LoginAuthenticationFilter.class); // JWT 검증 필터
+
         }
     }
 
